# tsuuchi

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  README.md  flake.nix
.github/workflows/: auto-release.yml
src/: backend.rs  dispatcher.rs  history.rs  lib.rs  notification.rs
tests/: integration.rs
